<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/main_qimg_d8ab7542eb431c11df80d40fbbe5971a_lq"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ClassC203"
            android:layout_width="301dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/C203"
            android:textColor="#126059"
            android:textColorHint="#BC3D3D"
            android:textSize="25dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/ClassC206"
            android:layout_width="301dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/C206"
            android:textColor="#126059"
            android:textColorHint="#BC3D3D"
            android:textSize="25dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/ClassC218"
            android:layout_width="301dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/C218"
            android:textColor="#126059"
            android:textColorHint="#BC3D3D"
            android:textSize="25dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/ClassC235"
            android:layout_width="301dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/C235"
            android:textColor="#126059"
            android:textColorHint="#BC3D3D"
            android:textSize="25dp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/ClassC346"
            android:layout_width="301dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/C346"
            android:textColor="#126059"
            android:textColorHint="#BC3D3D"
            android:textSize="25dp"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>

</LinearLayout>


